[project]
name = "telegramify-markdown"
version = "0.4.0"
description = "Makes it easy to send Markdown in Telegram MarkdownV2 style"
authors = [
    { name = "sudoskys", email = "coldlando@hotmail.com" },
]
dependencies = [
    "mistletoe==1.4.0",
    "loguru>=0.7.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
mermaid = [
    "Pillow>=10.4.0",
    "aiohttp>=3.10.11",
]

[dependency-groups]
dev = [
    "pytelegrambotapi>=4.22.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
repository = "https://github.com/sudoskys/telegramify-markdown"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
test = "python -m unittest discover -s ./tests -p *_test.py"
